增加libs类库引用，所有项目修改引用。增加淘宝客分享链接在线解析功能。增加福利闪达模块架子。

--- a/MsWeb.Domains/MsWeb.Domains.csproj
+++ b/MsWeb.Domains/MsWeb.Domains.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="Mingshu.Framework.MSWeb.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\MsWeb\bin\Mingshu.Framework.MSWeb.Core.dll</HintPath>
+      <HintPath>..\libs\Mingshu.Framework.MSWeb.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
