--- a/MsWeb.Core/MsWeb.Core.csproj
+++ b/MsWeb.Core/MsWeb.Core.csproj
@@ -57,7 +57,14 @@
     <Compile Include="Utils\LogUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\MessageUtil.cs" />
+    <Compile Include="Utils\TaobaoUtil.cs" />
     <Compile Include="Utils\WXBizMsgCrypt.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MsWeb.DataObjects\MsWeb.DataObjects.csproj">
+      <Project>{86d4db7b-a2b9-454c-965b-8b92716f4dab}</Project>
+      <Name>MsWeb.DataObjects</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\TensorFlowSharp.1.3.1-pre1\build\TensorFlowSharp.targets" Condition="Exists('..\packages\TensorFlowSharp.1.3.1-pre1\build\TensorFlowSharp.targets')" />
